--- a/config.yaml
+++ b/config.yaml
@@ -3,3 +3,4 @@ TECH_DICT_PATH: '../db/tech_dict'
 BACKUP_PATH: '../db/backup'
 GEO_DICT_PATH: '../db/geo_dict'
 
+DRIVER_PATH: '../chromedriver.exe'
